site/assets/main.css
html, body {
    margin: 0;
    padding: 0;
}

* {
    font-family: sans-serif;
    line-height: 1.2;
}

nav > a {
    padding-bottom: 1rem;
    display: flex;
}

ul.simple {
    list-style-type: none;
    margin: 0;
    padding: 0;
    padding-left: 1rem;
}

a {
    text-decoration: underline;
    color: black;
}

summary {
    cursor: pointer;
    margin-bottom: .2rem;
}

details[open] {
    padding-bottom: 1rem;
}

header {
    border-bottom: 1px solid black;
    padding-left: 1rem;
    width: 100%;
}

body > div {
    display: flex;
}

nav {
    padding: 1rem;
    margin-right: 2rem;
}

main {
    padding: 1rem;
}

main * {
    max-width: 600px;
}

code:not(.hljs) {
    background-color: #41123d;
    color: white;
    padding: .2rem;
    border-radius: .2rem;
}

code, code * {
    font-family: monospace !important;
}

p {
    line-height: 1.8;
    white-space: pre-line;
}

#avatar {
    width: 100px;
    height: 100px;
    border-radius: 100%;
    margin-left: 1rem;
}

img {
    width: 100%;
}

footer ul {
    list-style-type: none;
    margin: 0;
    padding: 1rem;
    margin-top: 3rem;
    display: flex;
    border-top: 1px solid black;
    justify-content: space-around;
}

@media screen and (max-width: 600px) {
    body > div {
        flex-direction: column;
    }
    
    nav {
        margin-bottom: 2rem;
        margin-right: 0;
    }

    nav ul {
        display: flex;
        flex-wrap: wrap;
    }

    nav ul li {
        margin-right: 1rem;
    }

    header {
        display: flex;
        padding: 0;
    }

    header > a {
        text-align: center;
        margin-left: auto;
        margin-right: auto;
    }

    #avatar {
        margin-left: auto;
        margin-right: auto;
    }
}

thead {
    font-weight: bold;
}

tbody tr:first-child td {
    border-top: none;
}

td {
    border-top: 1px solid black;
}

tr td {
    padding: .5rem;
    border-left: 1px solid black;
}

tr td:first-child {
    padding-left: 0;
    border-left: none;
}

tr td:last-child {
    padding-right: 0;
}

/* Dark mode for system preferences */

@media (prefers-color-scheme: dark) {
    body {
        background-color: #1e1e1e;
        color: white;
    }

    a {
        color: white;
    }

    code:not(.hljs) {
        background-color: white;
        color: black;
    }

    code.hljs {
        filter: invert(1);
        background: black;
    }

    td {
        border-top: 1px solid white;
    }

    tr td {
        border-left: 1px solid white;
    }

    footer ul {
        border-top: 1px solid white;
    }
}

